apps/templates/ivts-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ivts
  labels:
    istio-injection: enabled
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
